<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTituloVista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tit_main_activity"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblNombreCliente" />

    <EditText
        android:id="@+id/txtNombreCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblPedido" />

    <Button
        android:id="@+id/btnAddProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Buscar Menu" />

    <EditText
        android:id="@+id/edtDetallePedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="4" />

    <TextView
        android:id="@+id/tvTotalPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Total:" />

    <RadioGroup
        android:id="@+id/rgTipoPedido"
        android:layout_width="match_parent"
        android:layout_height="74dp">

        <RadioButton
            android:id="@+id/radBtnMesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblMesa" />

        <RadioButton
            android:id="@+id/radBtnDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblDelivery" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layoutCheckBox"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbIncluirPropina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblIncluirPropina" />

        <CheckBox
            android:id="@+id/cbPermiteCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblPermiteCancelar" />

        <CheckBox
            android:id="@+id/cbBebidaXL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblBebidaXL" />
    </LinearLayout>

    <Switch
        android:id="@+id/swtNotificaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblNotificaciones" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ToggleButton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblBtnConfirmar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblBtnCancelar" />
    </LinearLayout>

</LinearLayout>